@@ -1,3 +1,8 @@
+2001-03-07  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Audio:  Mixer now uses a fixed number of audio buffers, and
+	avoids dynamic memory access during the mixing callback.
+
 2001-03-07  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* Audio.cc/h: added a config/audio/enabled switch to kill all audio.
 	* */Makefile.am: added support for VPATH builds
